--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -38,8 +42,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     //circle image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    //visualizer bar
-    implementation 'com.gauravk.audiovisualizer:audiovisualizer:0.9.2'
 
+//    visualizer bardependencies {
+//    implementation 'com.gauravk.audiovisualizer:audiovisualizer:0.9.2'
 
 }
